--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -4,7 +4,7 @@ message(STATUS "Detecting ASIO...")
 find_path(ASIO_INCLUDE_DIRS asio.hpp)
 
 function(config_net targ)
-  if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  if (NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
     message(STATUS "Using ASIO in standalone mode")
     add_definitions(-DASIO_STANDALONE)
   else()
