cmake: use wrappers around target_link_libraries and find_library for cpp libs and the VS environmentcmake: use wrappers around target_link_libraries and find_library for cpp libs and the VS environment
Note: Use find_cpp_library instead of find_library if you got a dependency which is depending on the cpp stdlib (and hence produce incompatible binaries with VS on windows)

Therefore you will need two libs for visual studio (currently vs2013): one compiled for debug and one for release mode.

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -97,7 +97,8 @@ endif()
 
 set(CLIENT_LIBS ${COMMON_LIBS} ${SDL2_LIBRARIES}
   ${OPENGL_LIBRARIES} ${ADDITIONAL_LIBRARIES} CACHE INTERNAL "")
-target_link_libraries(${CLIENT_BINARY} ${CLIENT_LIBS})
+
+target_link_libraries_wrapper(${CLIENT_BINARY} ${CLIENT_LIBS})
 
 config_net(${CLIENT_BINARY})
 config_rpc(${CLIENT_BINARY})
