cmake: Always cache the output of find_cpp_library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -200,10 +200,10 @@ endfunction()
 function(find_cpp_library RETURNVAR LIBNAME)
     if(DEFINED HAS_FIND_LIBRARY_WRAPPER)
         definition_find_cpp_library(${RETURNVAR} ${LIBNAME})
-        set(${RETURNVAR} ${${RETURNVAR}} CACHE INTERNAL "")
     else()
         find_library(${RETURNVAR} ${LIBNAME})
     endif()
+    set(${RETURNVAR} ${${RETURNVAR}} CACHE INTERN "")
 endfunction()
 
 # USAGE: target_link_libraries_wrapper( <BINARYNAME> [ARGS] )
